force-app/main/default/objects/Liable_Party__c/Liable_Party__c.object-meta.xml
<CustomObject>
    <label>Liable Party</label>
    <nameField>
        <displayFormat>LP-{000000}</displayFormat>
        <label>Liable Party ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Liable Parties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>