force-app/main/default/objects/Liable_Party__c/fields/Appeal_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Deadline__c</fullName>
    <label>Appeal Deadline</label>
    <type>Date</type>
</CustomField>