force-app/main/default/objects/Liable_Party__c/fields/Attention_To__c.field-meta.xml
<CustomField>
    <fullName>Attention_To__c</fullName>
    <label>Attention To</label>
    <length>100</length>
    <type>Text</type>
</CustomField>