force-app/main/default/objects/Liable_Party__c/fields/Case_Role__c.field-meta.xml
<CustomField>
    <fullName>Case_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The liable party is related to a case role on the record. This field holds the value of that case role and is used for generating output document based on the party.</description>
    <inlineHelpText>Case role of the liable party</inlineHelpText>
    <label>Case Role</label>
    <referenceTo>Case_Role__c</referenceTo>
    <relationshipLabel>Liable Parties</relationshipLabel>
    <relationshipName>Liable_Parties</relationshipName>
    <type>Lookup</type>
</CustomField>