force-app/main/default/objects/Liable_Party__c/fields/Case_Role_Entity_Full_Output__c.field-meta.xml
<CustomField>
    <fullName>Case_Role_Entity_Full_Output__c</fullName>
    <formula>Case_Role__r.Relationship_Full_Output__c</formula>
    <label>Case Role Entity Full Output</label>
    <type>Text</type>
</CustomField>