force-app/main/default/objects/Liable_Party__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <description>This is a link to the Entity that is a Liable Party for a Liability.</description>
    <label>Entity</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Liable Party to Assessments</relationshipLabel>
    <relationshipName>Liable_Parties</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>