force-app/main/default/objects/Liable_Party__c/fields/Interest_Amount_Collected__c.field-meta.xml
<CustomField>
    <fullName>Interest_Amount_Collected__c</fullName>
    <description>Sum of Interest amount Liability Payments on behalf on this Liable Party. Populated by LiabilityPaymentTrigger -&gt; LiabilityPaymentMethods classes.</description>
    <inlineHelpText>Interest amount collected on behalf of this Liable Party.</inlineHelpText>
    <label>Interest Amount Collected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>