force-app/main/default/objects/Liable_Party__c/fields/Liability__c.field-meta.xml
<CustomField>
    <fullName>Liability__c</fullName>
    <description>This ties the Liability to One or Many Liable Parties for a specific Assessment. Not-Reparentable</description>
    <inlineHelpText>This ties the Liability to One or Many Liable Parties for a specific Assessment. Not-Reparentable</inlineHelpText>
    <label>Liability</label>
    <referenceTo>Liability__c</referenceTo>
    <relationshipLabel>Liable Parties</relationshipLabel>
    <relationshipName>Liable_Parties</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>