force-app/main/default/objects/Liable_Party__c/fields/Liability_Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Liability_Decision_Date__c</fullName>
    <description>Pulls the decision date down to the liable party for use in flow logic.</description>
    <formula>Liability__r.Decision_Date__c</formula>
    <label>Liability Decision Date</label>
    <type>Date</type>
</CustomField>