force-app/main/default/objects/Liable_Party__c/fields/ODA__c.field-meta.xml
<CustomField>
    <fullName>ODA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to new custom object: ODA.  For ODA document output purposes.</description>
    <label>ODA</label>
    <referenceTo>ODAS__c</referenceTo>
    <relationshipLabel>Liable Parties</relationshipLabel>
    <relationshipName>Liable_Parties</relationshipName>
    <type>Lookup</type>
</CustomField>