force-app/main/default/objects/Liable_Party__c/fields/Penalty_Amount_Collected__c.field-meta.xml
<CustomField>
    <fullName>Penalty_Amount_Collected__c</fullName>
    <description>Sum of Penalty amount Liability Payments on behalf on this Liable Party. Populated by LiabilityPaymentTrigger -&gt; LiabilityPaymentMethods classes.</description>
    <inlineHelpText>Penalty amount collected on behalf of this Liable Party.</inlineHelpText>
    <label>Penalty Amount Collected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>