force-app/main/default/objects/Liable_Party__c/fields/Penalty_Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>Penalty_Balance_Due__c</fullName>
    <formula>Proportionate_Penalty_Amount__c -  Penalty_Amount_Collected__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Penalty Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>