force-app/main/default/objects/Liable_Party__c/fields/Proportionate_Interest_Amount__c.field-meta.xml
<CustomField>
    <fullName>Proportionate_Interest_Amount__c</fullName>
    <formula>Liability__r.Total_Interest_Assessed__c *  Proportionate_Share__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Proportionate share of interest</inlineHelpText>
    <label>Proportionate Interest Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>