force-app/main/default/objects/Liable_Party__c/fields/Proportionate_Penalty_Amount__c.field-meta.xml
<CustomField>
    <fullName>Proportionate_Penalty_Amount__c</fullName>
    <description>Calculates the proportionate penalty amount</description>
    <formula>Proportionate_Share__c *  Liability__r.Total_Penalties_Assessed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Proportionate amount of liability owed by this party</inlineHelpText>
    <label>Proportionate Penalty Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>