force-app/main/default/objects/Liable_Party__c/fields/Proportionate_Share__c.field-meta.xml
<CustomField>
    <fullName>Proportionate_Share__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Defines the share of the liability that the liable party owes relative to the parent liability. Populated from the violation engine.</description>
    <label>Proportionate Share</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>