force-app/main/default/objects/Liable_Party__c/fields/Proportionate_Sum__c.field-meta.xml
<CustomField>
    <fullName>Proportionate_Sum__c</fullName>
    <formula>Proportionate_Wage_Amount__c  +  Proportionate_Interest_Amount__c + Proportionate_Penalty_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proportionate Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>