force-app/main/default/objects/Liable_Party__c/fields/Settlement__c.field-meta.xml
<CustomField>
    <fullName>Settlement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Settlement</label>
    <referenceTo>Settlement__c</referenceTo>
    <relationshipLabel>Liable Parties</relationshipLabel>
    <relationshipName>Liable_Parties</relationshipName>
    <type>Lookup</type>
</CustomField>