force-app/main/default/objects/Liable_Party__c/fields/Unregistered_Period_s_Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>Unregistered_Period_s_Balance_Due__c</fullName>
    <description>Created per request of Juan Carlos and Jan Joy; the secondary 2677 table in the Issues, Findings, and Assessments documents only contains penalties incurred by liable parties during unregistered periods.  Since it would be almost impossible to capture this automatically in SF, the WEG team will perform these calculations outside SF and populate the result here for output.</description>
    <label>Unregistered Period(s) Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>