force-app/main/default/objects/Liable_Party__c/fields/Wage_Amount_Collected__c.field-meta.xml
<CustomField>
    <fullName>Wage_Amount_Collected__c</fullName>
    <description>Sum of Wage amount Liability Payments on behalf on this Liable Party. Populated by LiabilityPaymentTrigger -&gt; LiabilityPaymentMethods classes.</description>
    <inlineHelpText>Wage amount collected on behalf of this Liable Party.</inlineHelpText>
    <label>Wage Amount Collected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>