force-app/main/default/objects/Liable_Party__c/fields/Wage_Interest_Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>Wage_Interest_Balance_Due__c</fullName>
    <formula>Proportionate_Wage_Interest_Amount__c - Wage_Amount_Collected__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wage Interest Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>