force-app/main/default/objects/Liable_Party__c/recordTypes/BOFE.recordType-meta.xml
<RecordType>
    <fullName>BOFE</fullName>
    <active>true</active>
    <description>Used for BOFE Liable Parties</description>
    <label>BOFE</label>
</RecordType>