force-app/main/default/objects/Liable_Party__c/validationRules/Case_Role_on_liability_case.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Role_on_liability_case</fullName>
    <active>false</active>
    <description>Requires that the case role being selected is on the same case as the liability</description>
    <errorConditionFormula>Case_Role__r.Case__c &lt;&gt;  Liability__r.Case_Management__c</errorConditionFormula>
    <errorMessage>You can only assign a case role on this case as a liable party on this case.</errorMessage>
</ValidationRule>